--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "ng": "ng",
     "test": "ng test",
-    "start": "ng serve --open --port 3003",
+    "start": "ng serve --host 192.168.2.103 --port 3003",
     "start-staging": "ng serve --open --configuration=staging --port 3001",
     "build-staging": "ng build --configuration=staging  --base-href '/homologation/'",
     "start-production": "ng serve --open --configuration=production --port 3001",
