--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webmap",
-  "version": "2.0.7",
+  "name": "sisgeo",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
