--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
               "src/assets/css/map/baselayer.css",
               "src/assets/css/map/estilo.css",
               "src/assets/css/map/jquery.mCustomScrollbar.min.css",
+              "src/assets/css/map/mCS-sisgeo-theme.css",
               "src/assets/css/jquery-ui/jquery.loading.css",
               "src/assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css",
               "src/styles.scss",
