- altera a rota base do projeto de "/app" para apenas "/" - adiciona componente about, que será a página principal dos projetos do sisgeo - adiciona outro componente (ngx-spinner) no carregamento da página - altera lógica do parâmetro da url de /webmap, que agora apenas aceita o parâmetro "hl" para definir a linguagem do site - modifica método de restaurar mapa, para restaurar na posição da primeira layer da primeira vision - corrigem ordem dos parâmetro que eram passados na método "map" de terrabrasilisApi, latitude e longitude estavam invertidos - diminui altura da div que fica o logo di sisgeo - altera as algumas cores do modal de  getFeatureInfo que ainda estavam em verde

--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -14,7 +14,7 @@ server {
   gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_comp_level   9;
 
-  location /app {
+  location / {
     alias /usr/share/nginx/html/;
     index index.html;
     try_files $uri$args $uri$args/ /index.html =404;
