--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start-staging": "ng serve --open --configuration=staging --port 3001",
     "build-staging": "ng build --configuration=staging  --base-href '/homologation/'",
     "start-production": "ng serve --open --configuration=production --port 3001",
-    "build-production": "ng build --configuration=production --base-href '/app/'",
+    "build-production": "ng build --configuration=production --base-href '/'",
     "build-gh-pages": "ng build --configuration=staging --base-href 'https://terrabrasilis.github.io/webmap/'",
     "deploy-gh-pages": "yarn build-gh-pages && ./node_modules/angular-cli-ghpages/angular-cli-ghpages --dir=dist/terrabrasilis --no-silent",
     "test_headless": "ng test --watch false --browsers ChromeHeadless",
@@ -51,6 +51,7 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "leaflet": "1.3.1",
     "lodash": "^4.17.10",
+    "ngx-spinner": "^8.1.0",
     "ngx-store": "^2.0.0",
     "node-sass": "^4.9.3",
     "ogc-schemas": "^2.6.1",
