--- a/package.json
+++ b/package.json
@@ -32,31 +32,20 @@
     "@angular/platform-browser-dynamic": "^8.2.1",
     "@angular/router": "^8.2.1",
     "@ecodev/fab-speed-dial": "4.0.0",
-    "@ngtools/webpack": "^8.2.1",
     "@ngx-pwa/local-storage": "^5.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^2.4.1",
-    "crossfilter2": "1.4.6",
     "d3": "5.5.0",
-    "d3-queue": "3.0.7",
-    "dc": "3.0.7",
-    "file-saver": "^2.0.0",
     "flag-icon-css": "^3.0.0",
     "gridstack": "0.4.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "jquery-bootstrap-scrolling-tabs": "^2.5.0",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-bundle": "^1.12.1-migrate",
     "leaflet": "1.3.1",
     "lodash": "^4.17.10",
     "ngx-spinner": "^8.1.0",
-    "ngx-store": "^2.0.0",
-    "node-sass": "^4.9.3",
     "ogc-schemas": "^2.6.1",
     "rxjs": "^6.5.2",
-    "rxjs-compat": "6",
+    "rxjs-compat": "^6.5.5",
     "terrabrasilis-api": "terrabrasilis/terrabrasilis-api#27f3b4f",
     "terrabrasilis-jsonix": "terrabrasilis/terrabrasilis-jsonix#96080e1",
     "terrabrasilis-util": "terrabrasilis/terrabrasilis-util#f3665cc",
@@ -70,27 +59,17 @@
     "@angular/language-service": "^8.2.1",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@types/crossfilter": "0.0.33",
     "@types/d3": "^5.0.0",
     "@types/d3-queue": "^3.0.7",
-    "@types/dc": "0.0.28",
-    "@types/file-saver": "^2.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.4",
+    "@types/jasmine": "^3.5.10",
     "@types/jqueryui": "^1.12.2",
     "@types/leaflet": "^1.5.0",
     "@types/node": "~12.7.1",
     "angular-cli-ghpages": "^0.6.0",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^5.2.1",
     "codelyzer": "^5.1.0",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
-    "css-to-string-loader": "^0.1.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.4.0",
@@ -103,17 +82,14 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "protractor": "~5.4.2",
     "sass-loader": "^7.2.0",
-    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^1.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "3.5.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.39.1",
-    "webpack-babel-installer": "^1.0.0",
     "webpack-cli": "3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-dev-server": "^3.8.0"
   },
   "browser": {
     "fs": false,
