--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "all_tests": "yarn test_headless && yarn lint"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.1",
+    "@angular/animations": "^9.1.9",
     "@angular/cdk": "^8.1.2",
-    "@angular/common": "^8.2.1",
-    "@angular/compiler": "^8.2.1",
-    "@angular/core": "^8.2.1",
-    "@angular/forms": "^8.2.1",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
     "@angular/http": "^7.2.15",
     "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "^8.2.1",
-    "@angular/platform-browser-dynamic": "^8.2.1",
-    "@angular/router": "^8.2.1",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@ecodev/fab-speed-dial": "4.0.0",
     "@ngx-pwa/local-storage": "^5.3.0",
     "@ngx-translate/core": "^11.0.1",
@@ -49,14 +49,15 @@
     "terrabrasilis-api": "terrabrasilis/terrabrasilis-api#27f3b4f",
     "terrabrasilis-jsonix": "terrabrasilis/terrabrasilis-jsonix#96080e1",
     "terrabrasilis-util": "terrabrasilis/terrabrasilis-util#f3665cc",
+    "tslib": "^1.10.0",
     "w3c-schemas": "^1.4.0",
-    "zone.js": "^0.8.19"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "~8.3.26",
-    "@angular/compiler-cli": "^8.2.1",
-    "@angular/language-service": "^8.2.1",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/cli": "~9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@types/d3": "^5.0.0",
@@ -64,9 +65,9 @@
     "@types/jasmine": "^3.5.10",
     "@types/jqueryui": "^1.12.2",
     "@types/leaflet": "^1.5.0",
-    "@types/node": "~12.7.1",
+    "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.0",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.1.2",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
@@ -85,7 +86,7 @@
     "style-loader": "^1.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "3.5.3",
+    "typescript": "3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
