- corrige alguns erros de compilação que surgiram depois da atualização pro angular 9

--- a/angular.json
+++ b/angular.json
@@ -170,6 +170,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "terrabrasilis"
+    }
+  },
+  "defaultProject": "terrabrasilis",
+  "cli": {
+    "analytics": false
+  }
 }
