--- a/package.json
+++ b/package.json
@@ -27,49 +27,50 @@
     "@angular/core": "^9.1.9",
     "@angular/forms": "^9.1.9",
     "@angular/http": "^7.2.15",
+    "@angular/localize": "^9.1.9",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
     "@ecodev/fab-speed-dial": "4.0.0",
-    "@ngx-pwa/local-storage": "^9.0.3",
+    "@ngx-pwa/local-storage": "^9.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "d3": "5.5.0",
-    "flag-icon-css": "^3.0.0",
+    "flag-icon-css": "^3.4.6",
     "gridstack": "0.4.0",
     "jquery": "^3.5.1",
     "leaflet": "1.3.1",
     "lodash": "^4.17.10",
     "ngx-spinner": "^8.1.0",
     "ogc-schemas": "^2.6.1",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
-    "terrabrasilis-api": "terrabrasilis/terrabrasilis-api#27f3b4f",
-    "terrabrasilis-jsonix": "terrabrasilis/terrabrasilis-jsonix#96080e1",
-    "terrabrasilis-util": "terrabrasilis/terrabrasilis-util#f3665cc",
-    "tslib": "^1.10.0",
+    "terrabrasilis-api": "github:terrabrasilis/terrabrasilis-api#27f3b4f",
+    "terrabrasilis-jsonix": "github:terrabrasilis/terrabrasilis-jsonix#96080e1",
+    "terrabrasilis-util": "github:terrabrasilis/terrabrasilis-util#f3665cc",
+    "tslib": "^1.13.0",
     "w3c-schemas": "^1.4.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.8",
     "@angular/language-service": "^9.1.9",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
     "@types/d3": "^5.0.0",
     "@types/d3-queue": "^3.0.7",
     "@types/jasmine": "^3.5.10",
-    "@types/jqueryui": "^1.12.2",
-    "@types/leaflet": "^1.5.0",
+    "@types/jqueryui": "^1.12.13",
+    "@types/leaflet": "^1.5.12",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.0",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.4.0",
@@ -78,11 +79,11 @@
     "karma-chrome-launcher": "~3.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "protractor": "~5.4.2",
+    "protractor": "^5.4.4",
     "sass-loader": "^7.2.0",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.2.1",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "3.8.3",
