--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-env": "^7.5.5",
     "@types/d3": "^5.0.0",
     "@types/d3-queue": "^3.0.7",
+    "@types/google.analytics": "0.0.40",
     "@types/jasmine": "^3.5.10",
     "@types/jqueryui": "^1.12.2",
     "@types/leaflet": "^1.5.0",
