- altera o nome do componente TerrabrasilisApiComponent em MapaService tornando-o em um serviço singleton - altera o nome do arquivo que contém as implementações para interagir com o mapa do leaflet de terrabrasilis.js para mapa.js - cria a entidade Download - altera as entidades: Layer, Tool, Vision para serem compatíveis as suas novas definicões no banco - implementa definições estáticas para os tipos de Tool existentes - implementa os serviços: DownloadService e MetadataService para acessar dados da business-api - adiciona configuração de proxy em ambiente de desenvolvimento para poder fazer requisições a rotas que não permitem CORS - adiciona biblioteca de desenvolvedor augury para analisar o desempenho do código

--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,14 @@
                   "maximumError": "100kb"
                 }
               ]
+            },
+            "augury": {
+              "fileReplacements": [
+                {
+                  "replace": "src/main.ts",
+                  "with": "src/main.augury.ts"
+                }
+              ]
             }
           }
         },
@@ -117,6 +125,9 @@
             },
             "staging": {
               "browserTarget": "terrabrasilis:build:staging"
+            },
+            "augury": {
+              "browserTarget": "terrabrasilis:build:augury"
             }
           }
         },
@@ -172,6 +183,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "terrabrasilis"
 }
