--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jquery": "^3.3.1",
     "leaflet": "1.3.1",
     "lodash": "^4.17.10",
+    "ng2-go-top-button": "^8.0.5",
     "ngx-spinner": "^8.1.0",
     "ogc-schemas": "^2.6.1",
     "rxjs": "^6.5.2",
