--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/sisgeo-favicon.ico",
               "src/assets"
             ],
             "styles": [
@@ -145,7 +145,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
+              "src/sisgeo-favicon.ico",
               "src/assets"
             ],
             "styles": [
