--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,8 @@
               "src/assets/css/map/mCS-sisgeo-theme.css",
               "src/assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css",
               "src/styles.scss",
-              "src/theme.scss"
+              "src/theme.scss",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
