--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "d3": "5.5.0",
     "flag-icon-css": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "gridstack": "0.4.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
