--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ngx-pwa/local-storage": "^5.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/geojson": "7946.0.8",
     "d3": "5.5.0",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
